Sample number display while rendering Cycles AMD might work incorrect #44830

Closed
opened 2015-05-24 21:48:07 +02:00 by Till Bench · 7 comments

System Information
Windows 8.1
AMD Radeon HD 7970 Ghz edition

Blender Version
Broken: 2.74 148ed4e (Official 2.75 Testbuild)

Short description of error
Negative Number appears as Number of Samples
SampleDisplay.png
I am completly not sure if this is actually a bug or only something leftover from a from testing, but in the form it appears, it does not make much sense to me.

Exact steps for others to reproduce the error
Start Blender; Switch to Cycles; Select OpenCL in Systemsettings; Select GPU-rendering; Start Render; Wait until at least one sample got rendered; Look at 'Sample'

**System Information** Windows 8.1 AMD Radeon HD 7970 Ghz edition **Blender Version** Broken: 2.74 148ed4e (Official 2.75 Testbuild) **Short description of error** Negative Number appears as Number of Samples ![SampleDisplay.png](https://archive.blender.org/developer/F179685/SampleDisplay.png) I am completly not sure if this is actually a bug or only something leftover from a from testing, but in the form it appears, it does not make much sense to me. **Exact steps for others to reproduce the error** Start Blender; Switch to Cycles; Select OpenCL in Systemsettings; Select GPU-rendering; Start Render; Wait until at least one sample got rendered; Look at 'Sample'
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BlendTillMax

Added subscriber: @BlendTillMax

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Same with nVidia GPU here.

Same with nVidia GPU here.

This issue was referenced by c3ab5b3089

This issue was referenced by c3ab5b3089ef79ea345a5bc836346f685aecf29c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@a135646ce6

This issue was referenced by blender/cycles@a135646ce68d34d10d68542934bb35a14cad1a13
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44830
No description provided.