Fix T44830, wrong sample progress number when using split device.

Value was not set, moved it out of the constructor into
device_opencl_create() now.